# csv-to-anki

./: .gitignore  Cargo.toml  README.md  vocab.csv
.github/workflows/: release.yaml  release.yml
csv_partitioner/: Cargo.toml
csv_partitioner/src/: lib.rs
src/: anki.rs  main.rs  parse.rs  vocab_importer.rs
src/csv-partitioner/: Cargo.toml
src/csv-partitioner/src/: lib.rs
