[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "csv-to-anki"
path = "src/main.rs"

[dependencies]
csv = "1.4.0"
csv-partitioner = { path = "csv_partitioner" }
reqwest = { version = "0.12.24", features = ["json", "blocking"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
